--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "npm start"
+    "start": "npm start",
+    "build": "react-scripts build"
   },
   "dependencies": {
     "firebase": "^11.2.0",
