--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "npm start",
-    "build": "react-scripts build"
+    "preview": "vite preview"
+
   },
   "dependencies": {
     "firebase": "^11.2.0",
